[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/nodes/transform_gizmo/axial_gizmo_3d.gd" type="Script" id=1]
[ext_resource path="res://scenes/instanced/workshop/gizmo/handle.tscn" type="PackedScene" id=2]

[sub_resource type="SpatialMaterial" id=1]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0.501961 )

[sub_resource type="SpatialMaterial" id=2]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 0.501961 )

[sub_resource type="SpatialMaterial" id=3]
render_priority = 1
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 0.501961 )

[node name="HandleGizmo" type="Spatial"]
script = ExtResource( 1 )

[node name="AreaX" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, -1.57361e-28, 1, -3.59989e-21, 1, 5.19999e-33, -1, -3.59989e-21, -4.37114e-08, 1.5, 0, 0 )
mesh = null
shape = null
material = SubResource( 1 )
dot_color = Color( 1, 0, 0, 1 )

[node name="AreaY" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
mesh = null
shape = null
material = SubResource( 2 )
dot_color = Color( 0.0313726, 1, 0, 1 )

[node name="AreaZ" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
mesh = null
shape = null
material = SubResource( 3 )
dot_color = Color( 0, 0, 1, 1 )
